--- a/main.html
+++ b/main.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkyBlock HEX Checker</title>
+    <title>SBPalette</title>
     <link rel="stylesheet" href="style.css">
 	<link rel="icon" href="logo.png">
 </head>
 <body>
     <div class="header">
-        <h1 id="title">Armor Color Analyzer Hypixel</h1>
-	    <h3>If you find bugs/shortcomings or have ideas, write to dm Discord @voksaieres</h3>
+        <h1 id="title">SBPalette for Hypixel</h1>
         <div class="header-buttons">
             <select id="languageSelect" onchange="toggleLanguage()">
                 <option value="ru">Русский</option>
