--- a/changelog.html
+++ b/changelog.html
@@ -53,7 +53,7 @@
                     <li>Added URL parameter support:</li>
                     <ul>
                         <li>Now you can share direct links to colors using URL parameter</li>
-                        <li>Example: yoksaires.github.io/sbhexchecker/sb_hex_check_v2.html?color=FF0000</li>
+                        <li>Example: yoksaires.github.io/sbpalette/main.html?color=FF0000</li>
                         <li>The color will be automatically loaded when opening the link</li>
                     </ul>
                 </ul>
