--- a/main.html
+++ b/main.html
@@ -24,6 +24,7 @@
             </select>
             <button onclick="clearHistory()">Clear History</button>
             <button onclick="openChangelog()" class="changelog-button">Changelog</button>
+            <button onclick="window.location.href='about.html'" class="about-button">About</button>
         </div>
     </div>
     <input type="text" id="hexInput" placeholder="Enter HEX code" onkeypress="handleKeyPress(event)">
