--- a/about.html
+++ b/about.html
@@ -5,69 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About - SBPalette</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        .about-container {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .about-section {
-            margin-bottom: 30px;
-            padding: 20px;
-            border-radius: 8px;
-            background-color: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(5px);
-        }
-        .contact-info {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-top: 10px;
-        }
-        .contact-info img {
-            width: 24px;
-            height: 24px;
-        }
-        .feature-list {
-            list-style-type: none;
-            padding: 0;
-        }
-        .feature-list li {
-            margin-bottom: 10px;
-            padding-left: 20px;
-            position: relative;
-        }
-        .feature-list li::before {
-            content: "•";
-            position: absolute;
-            left: 0;
-            color: #007BFF;
-        }
-        .tutorial-step {
-            margin-bottom: 15px;
-            padding: 10px;
-            border-left: 3px solid #007BFF;
-        }
-        .back-button {
-            display: inline-block;
-            margin-bottom: 20px;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-        }
-        .back-button:hover {
-            background-color: #0056b3;
-        }
-        .github-info {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: rgba(0, 123, 255, 0.1);
-            border-radius: 4px;
-            border-left: 3px solid #007BFF;
-        }
-    </style>
 </head>
 <body>
     <div class="about-container">
@@ -91,6 +28,7 @@
                 <li>5 beautiful themes</li>
                 <li>Ability to share colors via link</li>
                 <li>XML query support for Google Sheets integration</li>
+                <li>Copy table rows for Excel or Google Sheets</li>
             </ul>
         </div>
 
