--- a/main.html
+++ b/main.html
@@ -6,6 +6,7 @@
     <title>SBPalette</title>
     <link rel="stylesheet" href="style.css">
 	<link rel="icon" href="logo.png">
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
 </head>
 <body>
     <div class="header">
