Add compaer 2 diff colors feature

--- a/changelog.html
+++ b/changelog.html
@@ -24,6 +24,29 @@
            data-lang-en="Here you can track all the updates and improvements to SBPalette. The latest changes are displayed at the beginning of the list."></p>
 
         <div class="changelog-entry">
+            <div class="changelog-date"><i class="far fa-calendar-alt"></i> 19 апреля 2025</div>
+            <div class="changelog-content">
+                <ul>
+                    <li><span class="feature-badge major" data-lang-ru="Новое" data-lang-en="New"></span> 
+                        <span data-lang-ru="Добавлена страница для прямого сравнения двух цветов" 
+                              data-lang-en="Added page for direct comparison of two colors"></span></li>
+                    <ul>
+                        <li data-lang-ru="Теперь вы можете сравнить любые два HEX-кода и увидеть их разницу" 
+                            data-lang-en="Now you can compare any two HEX codes and see their difference"></li>
+                        <li data-lang-ru="Подробная информация о компонентах L*a*b* цветового пространства" 
+                            data-lang-en="Detailed information about L*a*b* color space components"></li>
+                        <li data-lang-ru="Возможность поделиться ссылкой на сравнение" 
+                            data-lang-en="Ability to share a link to the comparison"></li>
+                    </ul>
+                </ul>
+                <div class="commit-info">
+                    <span data-lang-ru="Автор: yoksaires" data-lang-en="Author: yoksaires"></span>
+                    <span class="contributor-label" data-lang-ru="Разработчик" data-lang-en="Developer"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="changelog-entry">
             <div class="changelog-date"><i class="far fa-calendar-alt"></i> 12 марта 2025</div>
             <div class="changelog-content">
                 <ul>
