--- a/main.html
+++ b/main.html
@@ -26,6 +26,7 @@
             <button onclick="clearHistory()">Clear History</button>
             <button onclick="openChangelog()" class="changelog-button">Changelog</button>
             <button onclick="window.location.href='about.html'" class="about-button">About</button>
+            <button onclick="window.location.href='compare.html'" class="compare-button">Compare Colors</button>
         </div>
     </div>
     <input type="text" id="hexInput" placeholder="Enter HEX code" onkeypress="handleKeyPress(event)">
