--- a/about.html
+++ b/about.html
@@ -39,6 +39,7 @@
                 <li data-lang-ru="История поиска" data-lang-en="Search history"></li>
                 <li data-lang-ru="5 красивых тем оформления" data-lang-en="5 beautiful themes"></li>
                 <li data-lang-ru="Возможность делиться цветами через ссылку" data-lang-en="Ability to share colors via link"></li>
+                <li data-lang-ru="Прямое сравнение двух произвольных цветов" data-lang-en="Direct comparison of two custom colors"></li>
                 <li data-lang-ru="Поддержка XML-запросов для интеграции с Google Sheets" data-lang-en="XML query support for Google Sheets integration"></li>
                 <li data-lang-ru="Настраиваемое копирование данных для Excel или Google Sheets" data-lang-en="Customizable data copying for Excel or Google Sheets"></li>
                 <li data-lang-ru="Возможность изменения порядка полей при копировании" data-lang-en="Ability to change the field order when copying"></li>
