Add delta e 2000 metric to

--- a/changelog.html
+++ b/changelog.html
@@ -27,6 +27,29 @@
             <div class="changelog-date"><i class="far fa-calendar-alt"></i> 19 апреля 2025</div>
             <div class="changelog-content">
                 <ul>
+                    <li><span class="feature-badge" data-lang-ru="Улучшение" data-lang-en="Improvement"></span> 
+                        <span data-lang-ru="Добавлена метрика Delta E 2000 для более точного сравнения цветов" 
+                              data-lang-en="Added Delta E 2000 metric for more accurate color comparison"></span></li>
+                    <ul>
+                        <li data-lang-ru="Реализован алгоритм Delta E 2000, который лучше соответствует человеческому восприятию цвета"
+                            data-lang-en="Implemented Delta E 2000 algorithm that better corresponds to human color perception"></li>
+                        <li data-lang-ru="Теперь страница сравнения показывает обе метрики: Delta E (CIE76) и Delta E 2000"
+                            data-lang-en="The comparison page now shows both metrics: Delta E (CIE76) and Delta E 2000"></li>
+                    </ul>
+                </ul>
+                <div class="commit-info">
+                    <span data-lang-ru="Автор: yoksaires" data-lang-en="Author: yoksaires"></span>
+                    <br>
+                    <span data-lang-ru="Идея: zachie" data-lang-en="Idea: zachie"></span>
+                    <span class="contributor-label" data-lang-ru="Идея" data-lang-en="Idea"></span>
+                </div>
+            </div>
+        </div>
+
+        <div class="changelog-entry">
+            <div class="changelog-date"><i class="far fa-calendar-alt"></i> 19 апреля 2025</div>
+            <div class="changelog-content">
+                <ul>
                     <li><span class="feature-badge major" data-lang-ru="Новое" data-lang-en="New"></span> 
                         <span data-lang-ru="Добавлена страница для прямого сравнения двух цветов" 
                               data-lang-en="Added page for direct comparison of two colors"></span></li>
