--- a/main.html
+++ b/main.html
@@ -33,6 +33,7 @@
                 </select>
                 <button onclick="window.location.href='about.html'" class="about-button" data-lang-ru="О проекте" data-lang-en="About">About</button>
                 <button onclick="window.location.href='compare.html'" class="compare-button-nav" data-lang-ru="Сравнить цвета" data-lang-en="Compare Colors">Compare Colors</button>
+                <button onclick="window.location.href='database.html'" class="database-button" data-lang-ru="База данных" data-lang-en="Database">Database</button>
                 <button onclick="alert('В разработке')" class="ah-button" data-lang-ru="Аукцион" data-lang-en="AH">AH</button>
                 <button onclick="window.location.href='changelog.html'" class="changelog-button" data-lang-ru="Список изменений" data-lang-en="Changelog">Changelog</button>
             </div>
