Added html with ALL Colors

--- a/compare.html
+++ b/compare.html
@@ -20,6 +20,7 @@
             </select>
             <button onclick="window.location.href='main.html'" class="back-button" data-lang-ru="Вернуться на главную" data-lang-en="Back to Main">Back to Main</button>
             <button onclick="window.location.href='about.html'" class="about-button" data-lang-ru="О проекте" data-lang-en="About">About</button>
+            <button onclick="window.location.href='color-database.html'" class="color-database-button" data-lang-ru="База цветов" data-lang-en="Color Database">Color Database</button>
         </div>
     </div>
     
