--- a/color-database.html
+++ b/color-database.html
@@ -6,7 +6,7 @@
     <title>Color Database - SBPalette</title>
     <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="style.css">
-    <meta name="description" content="База цветов SBPalette - автоматическая таблица всех цветов брони.">
+    <meta name="description" content="SBPalette Color Base from Hypixel - Automatic Table of All Armor Colors">
     <style>
         /* Фиксированный заголовок таблицы */
         .color-db-table thead th {
